--- a/hw_score_predict.ipynb
+++ b/hw_score_predict.ipynb
@@ -9,50 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /usr/local/lib/python3.9/site-packages (3.7.1)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.9/site-packages (2.1.4)\n",
-      "Requirement already satisfied: graphviz in /usr/local/lib/python3.9/site-packages (0.20.1)\n",
-      "Requirement already satisfied: bs4 in /usr/local/lib/python3.9/site-packages (0.0.1)\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.9/site-packages (1.3.2)\n",
-      "Requirement already satisfied: xgboost in /usr/local/lib/python3.9/site-packages (2.0.3)\n",
-      "Requirement already satisfied: TextBlob in /usr/local/lib/python3.9/site-packages (0.17.1)\n",
-      "Requirement already satisfied: textstat in /usr/local/lib/python3.9/site-packages (0.7.3)\n",
-      "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.9/site-packages (from bs4) (4.12.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.9/site-packages (from matplotlib) (9.5.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.9/site-packages (from matplotlib) (4.39.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.9/site-packages (from matplotlib) (1.0.7)\n",
-      "Requirement already satisfied: numpy>=1.20 in /Users/efe/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.24.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /usr/local/lib/python3.9/site-packages (from matplotlib) (5.12.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib) (3.15.0)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.15.0)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.9/site-packages (from pandas) (2023.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.9/site-packages (from pandas) (2020.1)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in /Users/efe/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.10.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.9/site-packages (from scikit-learn) (3.2.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.9/site-packages (from scikit-learn) (1.3.2)\n",
-      "Requirement already satisfied: nltk>=3.1 in /usr/local/lib/python3.9/site-packages (from TextBlob) (3.8.1)\n",
-      "Requirement already satisfied: click in /usr/local/lib/python3.9/site-packages (from nltk>=3.1->TextBlob) (7.1.2)\n",
-      "Requirement already satisfied: tqdm in /usr/local/lib/python3.9/site-packages (from nltk>=3.1->TextBlob) (4.66.1)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.9/site-packages (from nltk>=3.1->TextBlob) (2023.12.25)\n",
-      "Requirement already satisfied: pyphen in /usr/local/lib/python3.9/site-packages (from textstat) (0.14.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.9/site-packages (from beautifulsoup4->bs4) (2.5)\n",
-      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 23.3.2 is available.\n",
-      "You should consider upgrading via the '/usr/local/opt/python@3.9/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install matplotlib pandas graphviz bs4 scikit-learn xgboost TextBlob textstat"
    ]
@@ -129,14 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/127 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 127/127 [00:15<00:00,  8.08it/s]\n"
+      "100%|██████████| 127/127 [00:15<00:00,  8.04it/s]\n"
      ]
     }
    ],
@@ -2578,15 +2530,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also add a post processing to the predictions so that they are an integer between 0 and 100"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = xgb.XGBRegressor(objective='reg:squarederror', max_depth=4, random_state=42)\n",
+    "def post_process_predictions(predictions):\n",
+    "    predictions = np.clip(predictions, 0, 100)\n",
+    "    predictions = np.round(predictions).astype(int)\n",
+    "    return predictions\n",
+    "\n",
+    "model = xgb.XGBRegressor(objective='reg:squarederror', max_depth=2, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = model.predict(X_test)"
+    "y_pred = post_process_predictions(model.predict(X_test))"
    ]
   },
   {
@@ -2605,15 +2569,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE Train: 4.807366589300296e-07\n",
-      "MSE TEST: 49.84192783911771\n",
-      "R2 Train: 0.9999999970582814\n",
-      "R2 TEST: 0.5560356169733408\n"
+      "MSE Train: 0.2268041237113402\n",
+      "MSE TEST: 38.88\n",
+      "R2 Train: 0.9986121426462421\n",
+      "R2 TEST: 0.653678419747456\n"
      ]
     }
    ],
    "source": [
-    "y_train_pred = model.predict(X_train)\n",
+    "y_train_pred = post_process_predictions(model.predict(X_train))\n",
     "\n",
     "# Evaluate the model\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -2637,48 +2601,48 @@
      "text": [
       "\n",
       "Feature Importances:\n",
-      "               Feature    Importance\n",
-      "0                  Q_0  8.977861e-03\n",
-      "1                  Q_1  5.825483e-03\n",
-      "2                  Q_2  5.355165e-03\n",
-      "3                  Q_3  6.655202e-04\n",
-      "4                  Q_4  1.395850e-02\n",
-      "5                  Q_5  4.956928e-03\n",
-      "6                  Q_6  4.733551e-03\n",
-      "7                  Q_7  2.450579e-03\n",
-      "8                  Q_8  1.936310e-02\n",
-      "9          num_prompts  2.212034e-02\n",
-      "10    prompt_avg_chars  2.487407e-01\n",
-      "11            polarity  1.338991e-02\n",
-      "12        subjectivity  5.975238e-03\n",
-      "13          word_count  1.636533e-03\n",
-      "14   readability_score  6.076970e-03\n",
-      "15  response_avg_chars  2.011426e-03\n",
-      "16               error  1.744242e-04\n",
-      "17                  no  1.258718e-02\n",
-      "18                 yes  1.004815e-01\n",
-      "19                 but  2.616423e-01\n",
-      "20                 why  2.660715e-03\n",
-      "21               right  3.176567e-04\n",
-      "22               wrong  2.484541e-06\n",
-      "23                true  2.345761e-02\n",
-      "24               false  1.242249e-03\n",
-      "25             correct  5.500923e-04\n",
-      "26           incorrect  3.233635e-03\n",
-      "27                 how  9.348882e-03\n",
-      "28                 can  2.596274e-03\n",
-      "29                 try  5.421086e-07\n",
-      "30               again  4.433866e-04\n",
-      "31           of course  4.193020e-05\n",
-      "32           apologize  1.627502e-02\n",
-      "33    misunderstanding  9.866279e-02\n",
-      "34             clarify  3.011579e-07\n",
-      "35             provide  1.361934e-03\n",
-      "36              assist  1.774213e-02\n",
-      "37          valueerror  6.380075e-09\n",
-      "38           nameerror  8.073309e-02\n",
-      "39            keyerror  2.046696e-04\n",
-      "40           traceback  1.254422e-06\n"
+      "               Feature  Importance\n",
+      "0                  Q_0    0.017303\n",
+      "1                  Q_1    0.007595\n",
+      "2                  Q_2    0.015481\n",
+      "3                  Q_3    0.003228\n",
+      "4                  Q_4    0.037433\n",
+      "5                  Q_5    0.020730\n",
+      "6                  Q_6    0.010614\n",
+      "7                  Q_7    0.009934\n",
+      "8                  Q_8    0.016053\n",
+      "9          num_prompts    0.077042\n",
+      "10    prompt_avg_chars    0.338432\n",
+      "11            polarity    0.008759\n",
+      "12        subjectivity    0.020723\n",
+      "13          word_count    0.037030\n",
+      "14   readability_score    0.022666\n",
+      "15  response_avg_chars    0.010841\n",
+      "16               error    0.008664\n",
+      "17                  no    0.003180\n",
+      "18                 yes    0.005605\n",
+      "19                 but    0.218340\n",
+      "20                 why    0.000000\n",
+      "21               right    0.004264\n",
+      "22               wrong    0.000000\n",
+      "23                true    0.001291\n",
+      "24               false    0.009562\n",
+      "25             correct    0.001086\n",
+      "26           incorrect    0.004020\n",
+      "27                 how    0.001561\n",
+      "28                 can    0.009926\n",
+      "29                 try    0.002837\n",
+      "30               again    0.000000\n",
+      "31           of course    0.001534\n",
+      "32           apologize    0.012397\n",
+      "33    misunderstanding    0.001234\n",
+      "34             clarify    0.000000\n",
+      "35             provide    0.014666\n",
+      "36              assist    0.009478\n",
+      "37          valueerror    0.000000\n",
+      "38           nameerror    0.030444\n",
+      "39            keyerror    0.000387\n",
+      "40           traceback    0.005660\n"
      ]
     }
    ],
@@ -2736,31 +2700,31 @@
      "output_type": "stream",
      "text": [
       "    Real Grade  Predicted Grade\n",
-      "0         96.0        96.860962\n",
-      "1         91.0        84.900520\n",
-      "2         97.0        97.427048\n",
-      "3         88.0        96.074295\n",
-      "4        100.0        96.342728\n",
-      "5         97.0        98.322525\n",
-      "6        100.0        97.480362\n",
-      "7         95.0        89.719505\n",
-      "8         94.0        94.947411\n",
-      "9         90.0        99.632965\n",
-      "10        86.0        97.855553\n",
-      "11        98.0        93.309273\n",
-      "12        94.0        98.560585\n",
-      "13        78.0        95.321030\n",
-      "14        98.0        89.625587\n",
-      "15       100.0        98.536713\n",
-      "16        86.0        97.132568\n",
-      "17        97.0        95.659996\n",
-      "18        90.0        99.931343\n",
-      "19        48.0        39.475475\n",
-      "20        87.0        94.686295\n",
-      "21       100.0        91.945526\n",
-      "22        99.0        96.709129\n",
-      "23       100.0        95.904053\n",
-      "24        94.0        95.012314\n"
+      "0         96.0               91\n",
+      "1         91.0               88\n",
+      "2         97.0               95\n",
+      "3         88.0               92\n",
+      "4        100.0               99\n",
+      "5         97.0               94\n",
+      "6        100.0               99\n",
+      "7         95.0               91\n",
+      "8         94.0               97\n",
+      "9         90.0               90\n",
+      "10        86.0               97\n",
+      "11        98.0               96\n",
+      "12        94.0               97\n",
+      "13        78.0               97\n",
+      "14        98.0               93\n",
+      "15       100.0              100\n",
+      "16        86.0               97\n",
+      "17        97.0               92\n",
+      "18        90.0              100\n",
+      "19        48.0               53\n",
+      "20        87.0               88\n",
+      "21       100.0               93\n",
+      "22        99.0               95\n",
+      "23       100.0               96\n",
+      "24        94.0               91\n"
      ]
     }
    ],
@@ -2798,14 +2762,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/188 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 188/188 [00:35<00:00,  5.32it/s]\n"
+      "100%|██████████| 188/188 [00:40<00:00,  4.70it/s]\n"
      ]
     }
    ],
@@ -3069,17 +3026,17 @@
      "output_type": "stream",
      "text": [
       "                                       id  predicted_grade\n",
-      "0    00941713-c3a2-4d27-81dc-cd447ace4a47               41\n",
-      "1    00aea02f-a95a-4c04-8be3-777461732cdf               93\n",
-      "2    04fdb619-d902-4e98-a5e9-a8198bfe047c               99\n",
-      "3    05029661-f8d8-441b-9cab-3c79f28a8b26               98\n",
-      "4    059a146e-a37c-498f-8c0b-5a78204249cb               94\n",
+      "0    00941713-c3a2-4d27-81dc-cd447ace4a47               49\n",
+      "1    00aea02f-a95a-4c04-8be3-777461732cdf               83\n",
+      "2    04fdb619-d902-4e98-a5e9-a8198bfe047c               98\n",
+      "3    05029661-f8d8-441b-9cab-3c79f28a8b26               99\n",
+      "4    059a146e-a37c-498f-8c0b-5a78204249cb               90\n",
       "..                                    ...              ...\n",
-      "183  fab774ac-38c8-4d86-910c-7ad0fa8470c5               95\n",
-      "184  fac3042d-d72d-43a7-9170-a424e3061fac               94\n",
-      "185  fbf473eb-ea6f-4a4a-b2d8-405bc09f9850               99\n",
+      "183  fab774ac-38c8-4d86-910c-7ad0fa8470c5               96\n",
+      "184  fac3042d-d72d-43a7-9170-a424e3061fac               90\n",
+      "185  fbf473eb-ea6f-4a4a-b2d8-405bc09f9850               96\n",
       "186  fccd270d-63f8-42b6-b73e-13f6d3e5f612               95\n",
-      "187  fe81cca3-d9c2-4d82-97a4-9cc1444ea219               95\n",
+      "187  fe81cca3-d9c2-4d82-97a4-9cc1444ea219               98\n",
       "\n",
       "[188 rows x 2 columns]\n"
      ]
